# rust-custom-alloc

./: Cargo.toml  README.md
dependencies/alloc-rnb/: Cargo.toml
dependencies/alloc-rnb/src/: alloc_api.rs  lib.rs
src/: buddy.rs  inner_allocator.rs  lib.rs  macros.rs  main.rs  math.rs  mutex.rs  protected_allocator.rs  random.rs  tests.rs
src/inner_allocator/: math.rs
src/inner_allocator/math/: math64.rs
src/protected_allocator/: macros.rs
src/protected_allocator/math/: math32.rs
src/random/: lfsr16.rs
src/tests/: random.rs
