[package]
name = "night-buddy-allocator"
version = "0.0.3-alpha"
edition = "2021"
description = "A buddy memory allocator witch uses nightly toolchain for 32b/64b systems with no_std feature (tested on version 1.64.0-nightly)"
license = "MIT/Apache-2.0"
repository = "https://gitlab.com/mordaklavache/rust-custom-alloc/"

[dependencies]

# Allow cargo fmt and cargo test for all specified dependencies.
# cargo fmt
# cargo test --workspace
[workspace]
members = []

[features]
no-std = []
no-generic-std-mutex-impl = []

[dev-dependencies]